# beebot

./: Cargo.toml  README.md  build.rs
misc/: beebot.service  config.yaml  csv2emails.py  deploy.sh  install.sh
src/: config.rs  email.rs  grants.rs  jwt.rs  main.rs
